--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,5 +1,19 @@
 @import './style_components/variables.scss';
 
+
+//The html has a default margin that you can deal with using
+//the code below
+body,html{
+    margin:0;
+    width:100%;
+  }
+
+//This is how to make the background of the whole website into a color
+html{
+      background-color: #383838;
+}
+  
+
 #main_container{
     //We will be using the grid display as it is becoming the standard
     //Just because we use grid does not mean we do not use flex-box
@@ -15,7 +29,7 @@
     //grid-template-rows: repeat(5, 1f);
     //auto rows let us not define how many row, but just the height.
     //If we have both auto and template, then the auto will be a default.
-    grid-auto-rows: 150px;
+    
     
     //// can be used with grid-area to define where each item should be
     //// The value would be a string
@@ -23,5 +37,5 @@
     // "header header
     //  sidebar content";
 
-
+   
 }
