--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -3,6 +3,7 @@
 @import './style_components/primary_tab.scss';
 @import './style_components/template_container.scss';
 @import './style_components/footer.scss';
+@import './style_components/ticket_tab';
 
 //The html has a default margin that you can deal with using
 //the code below
@@ -40,5 +41,6 @@ html{
     // "header header
     //  sidebar content";
 
+    //
    
 }
