--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -14,7 +14,7 @@ body,html{
 
 //This is how to make the background of the whole website into a color
 html{
-      background-color: #383838;
+      background-color: $siteBackgroundColor;
 }
   
 
