--- a/src/style/style_components/_main_nav.scss
+++ b/src/style/style_components/_main_nav.scss
@@ -1,8 +1,7 @@
 //https://css-tricks.com/snippets/css/a-guide-to-flexbox/
-@import './variables';
 
 #main_nav{
-    background-color: #264653;
+    background-color: $primaryHeaderBGColor;
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
@@ -15,12 +14,14 @@
         margin-left: 20px;
 
         #main_nav__search_box{
-            color: #767676;
-            background-color: #242424 ;
-            border-color: #767676;
+            color: $searchBarTextAndBorderColor;
+            background-color: $secondaryBackgroundColor;
+            border-color: $searchBarTextAndBorderColor;
             border: 1px solid;
             width: 200px;
             height: 20px;
+            font-size: 14px;
+            padding-left: 5px;
         }
 
 
@@ -29,7 +30,14 @@
             margin-left: 15px;
             color: #74ADB5;
             text-decoration: none;
-            font-size: 20px;
+            font-size: 18px;
+            &:active{
+                color: #5f8e94 ;
+            }
+
+            &:link{
+                color: #5f8e94 ;
+            }
         }
 
     }
