--- a/src/style/style_components/_variables.scss
+++ b/src/style/style_components/_variables.scss
@@ -1,2 +1,20 @@
 // this is where all the variables for sass in the project will go
 // this is so we have a central location to manage it.
+
+
+//Overall HTML variable
+$siteBackgroundColor: #383838;
+$secondaryBackgroundColor: #242424;
+
+//primary header variables
+$primaryHeaderBGColor : #264653;
+$secondaryPHBGColor: #477284;
+////Seach bar colors in primary header 
+$searchBarTextAndBorderColor: #767676;
+
+//
+
+
+
+
+
