--- a/src/style/style_components/_variables.scss
+++ b/src/style/style_components/_variables.scss
@@ -9,8 +9,9 @@ $secondaryBackgroundColor: #242424;
 //primary header variables
 $primaryHeaderBGColor : #264653;
 $secondaryPHBGColor: #477284;
-////Seach bar colors in primary header 
-$searchBarTextAndBorderColor: #767676;
+////Seach bar colors in primary header
+$activeTextColor:white;
+$secondaryTextColor: #A5A5A5;
 
 //
 
