improved styling some more

--- a/src/style/style_components/_main_nav.scss
+++ b/src/style/style_components/_main_nav.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
+    
     // margin-top: 20px;
     height: 40px;
     //alignment goes on the parent that has the display
@@ -12,17 +13,39 @@
 
     #main_nav__search_container{
         margin-left: 20px;
-
+        display: flex;
+        align-items: center;
+     
         #main_nav__search_box{
+            display: flex;
             color: $secondaryTextColor;
             background-color: $secondaryBackgroundColor;
-            border-color: $secondaryTextColor;
             border: 1px solid;
             width: 200px;
             height: 20px;
-            font-size: 16px;
+            font-size: 14px;
             padding-left: 5px;
+            margin: 0px;
+            justify-content: space-between;
+            align-items: center;
+
+            input{
+                background-color: $secondaryBackgroundColor;
+                border: 0px solid;
+                color: $secondaryTextColor;
+                //this makes it so the search go through the full bar
+                //it also let you type more than the width of the bar
+                flex: auto;
+            }
+
+            i{
+                font-size: 18px;
+                padding-right: 3px;
+                margin-left: 3px;
+            }
         }
+
+        
 
 
         a{
@@ -30,7 +53,7 @@
             margin-left: 15px;
             color: #74ADB5;
             text-decoration: none;
-            font-size: 18px;
+            font-size: px;
             &:active{
                 color: #5f8e94 ;
             }
@@ -45,6 +68,7 @@
     #main_nav__menu_container{
         background-color: coral;
         margin-right: 20px;
+
         
     }
 }
