--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,4 +1,7 @@
 @import './style_components/variables.scss';
+@import './style_components/header_container.scss';
+@import './style_components/ticket_column';
+@import './style_components/tab_line.scss';
 @import './style_components/primary_tab.scss';
 @import './style_components/template_container.scss';
 @import './style_components/footer.scss';
