--- a/src/style/style_components/_variables.scss
+++ b/src/style/style_components/_variables.scss
@@ -13,7 +13,8 @@ $secondaryPHBGColor: #477284;
 $activeTextColor:white;
 $secondaryTextColor: #A5A5A5;
 
-//
+//Column Title
+$columnTitleColor:#141414;
 
 
 
