--- a/src/style/style_components/_variables.scss
+++ b/src/style/style_components/_variables.scss
@@ -16,6 +16,9 @@ $secondaryTextColor: #A5A5A5;
 //Column Title
 $columnTitleColor:#141414;
 
+//Main Text Style
+$mainTextStyle:'Roboto', sans-serif;
+
 
 
 
