--- a/src/style/style_components/_main_nav.scss
+++ b/src/style/style_components/_main_nav.scss
@@ -5,6 +5,7 @@
     display: flex;
     flex-wrap: nowrap;
     justify-content: space-between;
+    font-family: $mainTextStyle;
     
     // margin-top: 20px;
     height: 40px;
@@ -33,6 +34,7 @@
                 background-color: $secondaryBackgroundColor;
                 border: 0px solid;
                 color: $secondaryTextColor;
+                font-family: $mainTextStyle;
                 //this makes it so the search go through the full bar
                 //it also let you type more than the width of the bar
                 flex: auto;
@@ -66,9 +68,30 @@
     }
 
     #main_nav__menu_container{
-        background-color: coral;
-        margin-right: 20px;
-
+        display: flex;
         
+        align-items: center;
+        margin-right: 20px;
+        color:$secondaryTextColor;
+
+        a{
+            //need to move color in here to change the text
+            margin-right: 15px;
+            color: #74ADB5;
+            text-decoration: none;
+            font-size: px;
+            &:active{
+                color: #5f8e94 ;
+            }
+
+            &:link{
+                color: #5f8e94 ;
+            }
+        }
+        
+        i{
+            font-size: 30px;
+            cursor: pointer;
+        }
     }
 }
