--- a/src/style/style_components/_primary_tab.scss
+++ b/src/style/style_components/_primary_tab.scss
@@ -66,6 +66,11 @@
             //Makes it so the user cannot highlight the icon
             user-select: none;
 
+            &:active{
+                color: $activeTextColor;
+
+            }
+
         }
 
     }
