--- a/src/style/style_components/_ticket_column.scss
+++ b/src/style/style_components/_ticket_column.scss
@@ -28,6 +28,7 @@
                 font-size: 18px;
                 color: $secondaryTextColor;
                 cursor: pointer;
+                user-select: none;
             }
         }
 
