--- a/src/style/style_components/_ticket_tab.scss
+++ b/src/style/style_components/_ticket_tab.scss
@@ -30,7 +30,14 @@
             user-select: none;
             font-size: 12px;
             cursor: pointer;
+
+            &:active{
+                color: $activeTextColor;
+
+            }
         }    
+
+
 
 
     }
