--- a/src/style/style_components/_main_nav.scss
+++ b/src/style/style_components/_main_nav.scss
@@ -44,6 +44,7 @@
                 font-size: 18px;
                 padding-right: 3px;
                 margin-left: 3px;
+                user-select: none;
             }
         }
 
@@ -92,6 +93,7 @@
         i{
             font-size: 30px;
             cursor: pointer;
+            user-select: none;
         }
     }
 }
