adding ticket styling

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -7,6 +7,7 @@
 @import './style_components/footer.scss';
 @import './style_components/ticket_tab.scss';
 @import './style_components/main_nav.scss';
+@import './style_components/ticket.scss';
 
 //The html has a default margin that you can deal with using
 //the code below
