--- a/src/style/style_components/_main_nav.scss
+++ b/src/style/style_components/_main_nav.scss
@@ -56,7 +56,7 @@
             margin-left: 15px;
             color: #74ADB5;
             text-decoration: none;
-            font-size: px;
+            font-size: 16px;
             &:active{
                 color: #5f8e94 ;
             }
@@ -70,7 +70,6 @@
 
     #main_nav__menu_container{
         display: flex;
-        
         align-items: center;
         margin-right: 20px;
         color:$secondaryTextColor;
@@ -80,7 +79,7 @@
             margin-right: 15px;
             color: #74ADB5;
             text-decoration: none;
-            font-size: px;
+            font-size: 16px;
             &:active{
                 color: #5f8e94 ;
             }
