--- a/src/style/style_components/_ticket_tab.scss
+++ b/src/style/style_components/_ticket_tab.scss
@@ -25,7 +25,7 @@
         font-family: $mainTextStyle;
         font-size: 14px;
 
-        a{
+        i{
             //Makes it so the user cannot highlight the icon
             user-select: none;
             font-size: 12px;
