adding ticket column functions

--- a/src/style/style_components/_ticket_column.scss
+++ b/src/style/style_components/_ticket_column.scss
@@ -5,7 +5,7 @@
     .single_ticket_column{
         
         color:$activeTextColor;
-        
+        margin-right: 30px;
        
         .column_title{
             
@@ -46,7 +46,7 @@
 
         i{
             color:$secondaryTextColor;
-            margin-left: 20px;
+
             user-select: none;
             cursor: pointer;
 
