--- a/src/style/style_components/_variables.scss
+++ b/src/style/style_components/_variables.scss
@@ -19,6 +19,9 @@ $columnTitleColor:#141414;
 //Main Text Style
 $mainTextStyle:'Roboto', sans-serif;
 
+//Main Container size. If lower than 100% then it will add white space to the sides.
+$mainContainer:90vw;
+
 
 
 
