--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,4 +1,7 @@
+//The variables will be needed to be imported first.
+//This is because the other components will use the variables.
 @import './style_components/variables.scss';
+@import './style_components/main_container';
 @import './style_components/header_container.scss';
 @import './style_components/ticket_column';
 @import './style_components/tab_line.scss';
@@ -8,6 +11,7 @@
 @import './style_components/ticket_tab.scss';
 @import './style_components/main_nav.scss';
 @import './style_components/single_ticket.scss';
+@import './style_components/form.scss';
 
 
 
