--- a/src/style/style_components/_template_container.scss
+++ b/src/style/style_components/_template_container.scss
@@ -1,5 +1,9 @@
 #template_container{
     margin-top: 40px;
+                   //this this overflow on the top container. so that if content
+    //is bigger than the container it will hide it.
+    overflow: hidden;
+ 
 
     .template_options{
         display: flex;
