--- a/src/style/style_components/_ticket_column.scss
+++ b/src/style/style_components/_ticket_column.scss
@@ -6,10 +6,10 @@
     #ticket_column_list{     
         display: flex;
         overflow-x: auto;
+        scrollbar-width: thin;
+
       
     }
-
-
 
 
 
