--- a/src/style/style_components/_ticket_column.scss
+++ b/src/style/style_components/_ticket_column.scss
@@ -7,7 +7,8 @@
         display: flex;
         overflow-x: auto;
         scrollbar-width: thin;
-
+        //have to rotate 180 to get the scrollbar on top
+        transform:rotateX(180deg);
       
     }
 
@@ -16,7 +17,9 @@
     .single_ticket_column{
         margin-right: 20px;
         color:$activeTextColor;
-        
+        //when we rotate 180 for the scrollbar, we rotate the elements too
+        //we have to rotate them back.
+        transform:rotateX(180deg);
         
        
         .column_title{
