--- a/src/style/style_components/_ticket_tab.scss
+++ b/src/style/style_components/_ticket_tab.scss
@@ -2,6 +2,7 @@
     display: flex;
     margin-top: 5px;
     height: 30px;
+  
     
     .single_ticket_tab{
 
@@ -14,7 +15,7 @@
         //use border-box as it help prevent padding from
         //adding to the element's width/height
         box-sizing: border-box;
-        margin-left: 5px;
+        margin-right: 5px;
         height: 30px;
         width: 125px;
         padding-left: 5px;
