added ticket tab context

--- a/src/style/style_components/_ticket_column.scss
+++ b/src/style/style_components/_ticket_column.scss
@@ -33,8 +33,13 @@
             width: 275px;
             height: 45px;
 
+            
+
             p{
                 font-size: 22px;
+                width: 175px;
+                overflow: hidden;
+                text-overflow: ellipsis;
             }
 
             i{
