--- a/src/style/style_components/_primary_tab.scss
+++ b/src/style/style_components/_primary_tab.scss
@@ -24,8 +24,8 @@
             //if you want no scrollbar, you can use overflow hidden.
             overflow-x: auto;
             scrollbar-width: thin;
+            scroll-behavior: smooth;
             
-
         }
 
         
