--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -11,7 +11,7 @@
 @import './style_components/ticket_tab.scss';
 @import './style_components/main_nav.scss';
 @import './style_components/single_ticket.scss';
-@import './style_components/form.scss';
+@import './style_components/ticket_form.scss';
 
 
 //The html has a default margin that you can deal with using
