--- a/src/style/style_components/_variables.scss
+++ b/src/style/style_components/_variables.scss
@@ -10,7 +10,7 @@ $secondaryBackgroundColor: #242424;
 $primaryHeaderBGColor : #264653;
 $secondaryPHBGColor: #477284;
 ////Seach bar colors in primary header
-$activeTextColor:white;
+$activeTextColor:rgb(235, 235, 235);
 $secondaryTextColor: #A5A5A5;
 
 //Column Title
