--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,6 +1,7 @@
 //The variables will be needed to be imported first.
 //This is because the other components will use the variables.
 @import './style_components/variables.scss';
+@import './style_components/login_form';
 @import './style_components/main_container';
 @import './style_components/header_container.scss';
 @import './style_components/ticket_column';
