--- a/src/style/style_components/_main_nav.scss
+++ b/src/style/style_components/_main_nav.scss
@@ -99,7 +99,7 @@
                 box-sizing: border-box;
                 position: absolute;
                 width: 200px;
-                background-color: rgb(32, 99, 138);
+                background-color: $secondarymainBGColor;
                 transform: translateX(-75%);
                 overflow: hidden;
                 border-radius: 5px;
