--- a/src/style/style_components/_variables.scss
+++ b/src/style/style_components/_variables.scss
@@ -10,8 +10,11 @@ $secondaryBackgroundColor: #242424;
 $primaryHeaderBGColor : #264653;
 $secondaryPHBGColor: #477284;
 ////Seach bar colors in primary header
-$activeTextColor:rgb(235, 235, 235);
+$activeTextColor:rgb(243, 243, 243);
 $secondaryTextColor: #A5A5A5;
+
+//Secondary coloring
+$secondarymainBGColor: rgb(32, 99, 138);;
 
 //Column Title
 $columnTitleColor:#141414;
