improved setup styling

--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -13,6 +13,7 @@
 @import './style_components/main_nav.scss';
 @import './style_components/single_ticket.scss';
 @import './style_components/ticket_form.scss';
+@import './style_components/setup_page.scss';
 
 
 //The html has a default margin that you can deal with using
