--- a/src/style/style_components/_variables.scss
+++ b/src/style/style_components/_variables.scss
@@ -25,6 +25,9 @@ $mainTextStyle:'Roboto', sans-serif;
 //Main Container size. If lower than 100% then it will add white space to the sides.
 $mainContainer:90vw;
 
+//login and signup container size
+$loginAndSignUpSize: 300px;
+
 
 
 
