--- a/src/style/style_components/_setup_page.scss
+++ b/src/style/style_components/_setup_page.scss
@@ -1,18 +1,34 @@
-.step_container{
+#step_container{
     height: 40px;
     width: ($loginAndSignUpSize + 40px);
     display: flex;
-    justify-content: space-between;
-
+    justify-content: center;
     margin-bottom: 10px;
-
+   
+   
     div{
-        background-color: aquamarine;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: $secondarymainBGColor;
         border-radius: 50%;
         width:40px;
         height: 40px;
- 
-        
+        margin-right: 15px;
+        margin-left: 15px;
+        transition: filter 300ms;
+        user-select: none;
+        p{
+            
+            font-size: 25px;
+        }
+
+
+     
+    }
+
+    .step_active{
+        filter: brightness(1.55);
     }
 }
 
@@ -47,6 +63,7 @@
             display: flex;
             flex-direction: column;
         }
+
 
 
 
@@ -107,10 +124,27 @@
         font-size: 10px;
     }
 
+
+
     button{
         align-self: flex-end;
-        max-width: fit-content;
-        margin: 20px 0 5px 0;
+
+        font-size: 16px;
+        color:$activeTextColor;
+        width: fit-content;
+        margin-top: 15px;
+        height: 30px;
+        border: none;
+        border-radius: 10px;
+        background-color: $secondarymainBGColor;
+        cursor: pointer;
+       
+
+        &:hover{
+            filter: brightness(1.25);
+            color:$activeTextColor;
+        }
     }
+
 
 }
