updated column delete

--- a/src/style/style_components/_main_nav.scss
+++ b/src/style/style_components/_main_nav.scss
@@ -89,6 +89,10 @@
                 user-select: none;
 
                 &:active{
+                    animation: navClick 1s;;
+                }
+
+                &:hover{
                     filter: brightness(1.25);
                 }
             }
