--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -14,6 +14,8 @@
 @import './style_components/single_ticket.scss';
 @import './style_components/ticket_form.scss';
 @import './style_components/setup_page.scss';
+//Include the animation in the variable file on the top index so others can use it.
+@include blinkclick;
 
 
 //The html has a default margin that you can deal with using
